# MicroFund-Africa

./: Cargo.toml  GEMINI.md  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs  tests.rs
backend/src/handlers/: auth.rs  loans.rs  mod.rs  savings.rs
backend/src/middleware/: error.rs
backend/src/models/: mod.rs
backend/src/services/: blockchain.rs  mod.rs  mpesa.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
frontend/: Cargo.toml  Dockerfile  index.html  nginx.conf
frontend/src/: app_context.rs  main.rs
frontend/src/components/: mod.rs  navbar.rs  notifications.rs
frontend/src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  register.rs
frontend/src/services/: api.rs  storage.rs
frontend/src/utils/: i18n.rs
migrations/: 20260105120000_init.sql  20260105130000_savings.sql  20260105140000_p2p_lending.sql  20260105150000_reputation.sql  20260105160000_ledger.sql  seed_data.sql
